Fix spacing between site contents and nav bar

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -21,7 +21,6 @@ body {
 .navbar {
     padding: 0 !important;
     margin-top: 20px;
-    margin-bottom: 20px;
 }
 
 .mainheading {
@@ -64,7 +63,7 @@ pre {
 .site-content {
     min-height: 60vh;
     padding-top: 1.5rem;
-    margin-top: 57px;
+    margin-top: 75px;
     transition: all 0.4s;
 }
 
